--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
              </picture>
              <div class="d-none d-md-block">
                  <h5>Damas</h5>
-                 <p>Indumentaria femenina para cada ocasión.</p>
+                 <p>Indumentaria femenina para cada ocasión especial. Borrar esto</p>
              </div>
          </div>
 
