--- a/damas.html
+++ b/damas.html
@@ -10,7 +10,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="description" content="Encontrá la ropa de damas más linda para mujeres. Comprá Ropa para mujer y dama con envío gratis y en cuotas!">
+    <meta name="description" content="Encontrá la ropa más linda para mujeres. Comprá Ropa para mujer y dama con envío gratis y en cuotas!">
   
     <meta name="keywords" content="camisas, calzado, indumentaria, jeans, denim, carteras, abrigos, sweaters, sacos, vinchas, buzos, remeras, chombas, polos, camisetas, pantalones, borcegos, zapatos">
 
