Corregidos algunos errores en textos.

--- a/contacto.html
+++ b/contacto.html
@@ -10,7 +10,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="description" content="Encontrá la ropa nueva más linda en Taca Taca. Comprá Ropa para mujer, nene, nena con envío gratis y en cuotas!">
+    <meta name="description" content="Encontrá la ropa nueva mas linda en Taca Taca. Comprá Ropa para mujer, nene, nena con envío gratis y en cuotas!">
     
     <meta name="keywords" content="camisas, calzado, indumentaria, jeans, denim, carteras, abrigos, sweaters, sacos, vinchas, buzos, remeras, chombas, polos, camisetas, pantalones, borcegos, zapatos">
 
