--- a/ninios.html
+++ b/ninios.html
@@ -11,7 +11,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="description" content="Encontrá la ropa de nenes más linda para los chicos. Comprá Ropa para nenes y varones con envío gratis y en cuotas!">
+    <meta name="description" content="Encontrá la ropa de nenes más linda para los chicos. Comprá ropa para nenes y varones con envío gratis y en cuotas!">
   
     <meta name="keywords" content="camisas, calzado, indumentaria, jeans, denim, carteras, abrigos, sweaters, sacos, vinchas, buzos, remeras, chombas, polos, camisetas, pantalones, borcegos, zapatos">
 
